syntax = "proto3";

package model;

// Generic credentials model.
message ProviderCredentials {
  // Public key.
  string public_key = 1;
  // Private key.
  string private_key = 2;
}
